# page-analyzer

./: .gitignore  Makefile  Makefile.bak  README.md  database.sql  pyproject.toml  pyproject.toml.bak
.github/workflows/: github-actions.yml
page_analyser/: __init__.py.bak  app.py
page_analyser/templates/: index.html  urls.html  urls_id.html
page_analyzer/: .env  __init__.py  app.py  app.py.bak  content.py  db.py  from_past.py  functions.py  html.py  request_code.py  validator.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  urls.html  urls_id.html
