[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["amrylnikov <amrylnikov@gmail.com>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
validators = "^0.20.0"
bs4 = "^0.0.1"
requests = "^2.31.0"
flask = "^2.3.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "page_analyzer.app:main"
